# Yu-Gi-Oh-LLM

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/processed/yugioh/v001/: metadata.json  tokenizer-bpe.json
scripts/: BPE_tokenizer.py  build_tokenizer.py  create_dataset.py  download_data.py  inference.py  open_pack.py  train.py
src/llm_from_scratch/: checkpoint.py  dataset.py  tokenizer.py  transformer.py  utils.py
tests/: test_checkpoint.py  test_tokenizer.py  test_transformer.py
